<resources>
    <string name="app_name">final</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="type">分类</string>
    <string name="photo">照片</string>
    <string name="music">音乐</string>
    <string name="video">视频</string>
    <string name="application">应用</string>
    <string name="file">文件</string>
    <string name="translation">传输</string>
    <string name="info">属性</string>
    <string name="delete">删除</string>
    <string name="sure">确定</string>
    <string name="finish">完成</string>
    <string name="backup">返回</string>
    <string name="cancel">取消</string>
    <string name="newDirectory">新建文件夹</string>
    <string name="newFile">新建文件</string>
    <string name="file_name_can_not_empty">文件名不能为空</string>
    <string name="file_suffix_can_not_empty">文件后缀不能为空</string>
    <string name="new_file_fail">创建失败，请检查文件名是否已存在</string>
    <string name="no_selected">当前未选择任何文件</string>
    <string name="create_hotspot">创建热点</string>
    <string name="open_wifi">打开wifi</string>
    <string name="ask_is_open_wifi">该功能需要创建热点或开启wifi</string>
    <string name="create_hotspot_fail">创建失败，请手动创建</string>
    <string name="reConnected_please_wit">重连中，请稍后</string>
    <string name="check_your_network_setting">请检查wifi和热点状态</string>
    <string name="create_transfer_fail">创建链接失败</string>
    <string name="is_close_link">是否要断开链接</string>
    <string name="select_dev_to_send">将文件发送到</string>
    <string name="no_link">当前没有链接中的设备</string>
    <string name="no_dev_selected">当前未选择任何设备</string>
    <string name="device">设备</string>
    <string name="scan_tips">请把二维码放进方框中</string>
    <string name="search">搜索</string>
    <string name="search_content_not_null">搜索内容不能为空</string>
    <string name="transition_scan">scan</string>
    <string name="transition_search">search</string>
    <string name="set_storePath">接收路径</string>
    <string name="qr_code">二维码</string>
    <string name="loading">加载中...</string>
    <string name="searching">搜索中...</string>
    <string name="linking">连接中</string>
    <string name="link_succeed">链接成功</string>
    <string name="link_fail">链接失败，请稍后尝试</string>
    <string name="exit">再按一次退出程序</string>
    <string name="fab_behavior">com.example.asus88.finaldesgin.FabBehavior</string>
    <string name="wifi_ap_qrCode">热点二维码</string>
</resources>
